--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@apollo/client": "^3.5.10",
     "@vue/apollo-composable": "^4.0.0-alpha.16",
     "@vue/apollo-option": "^4.0.0-alpha.16",
+    "apollo-boost": "^0.4.9",
     "graphql": "^16.3.0",
     "graphql-tag": "^2.12.6",
+    "react": "^18.0.0",
     "vue": "^3.2.30",
+    "vue-apollo": "^3.1.0",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
