--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apollo-boost": "^0.4.9",
     "graphql": "^16.3.0",
     "graphql-tag": "^2.12.6",
+    "pinia": "^2.0.13",
     "react": "^18.0.0",
     "vue": "^3.2.30",
     "vue-apollo": "^3.1.0",
