--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore --fix src/",
+    "format": "prettier . --write"
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
@@ -16,12 +18,25 @@
     "graphql-tag": "^2.12.6",
     "pinia": "^2.0.13",
     "react": "^18.0.0",
+    "sass": "^1.50.1",
+    "typescript": "^4.6.3",
     "vue": "^3.2.30",
     "vue-apollo": "^3.1.0",
-    "vue-router": "^4.0.14"
+    "vue-router": "^4.0.14",
+    "vue-tsc": "^0.34.7"
   },
   "devDependencies": {
+    "@types/node": "^17.0.25",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
     "@vitejs/plugin-vue": "^2.3.1",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "^10.0.0",
+    "eslint": "^8.13.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.6.0",
+    "prettier": "^2.6.2",
     "vite": "^2.9.2"
   }
 }
