--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@vue/apollo-composable": "^4.0.0-alpha.16",
     "@vue/apollo-option": "^4.0.0-alpha.16",
     "apollo-boost": "^0.4.9",
+    "element-plus": "^2.1.10",
     "graphql": "^16.3.0",
     "graphql-tag": "^2.12.6",
     "pinia": "^2.0.13",
     "react": "^18.0.0",
     "sass": "^1.50.1",
     "typescript": "^4.6.3",
+    "unplugin-vue-components": "^0.19.3",
     "vue": "^3.2.30",
     "vue-apollo": "^3.1.0",
     "vue-router": "^4.0.14",
