--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
     "@strapi/plugin-graphql": "^4.0.0",
     "@strapi/plugin-i18n": "4.1.8",
     "@strapi/plugin-users-permissions": "4.1.8",
+    "@strapi/provider-upload-aws-s3": "^4.1.8",
     "@strapi/strapi": "4.1.8",
     "better-sqlite3": "7.4.6",
     "lodash.set": "^4.3.2",
